feat: add more description

--- a/notebooks/detectors_lab.ipynb
+++ b/notebooks/detectors_lab.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Viola"
+    "## Viola-Jones (Haar Cascade)\n",
+    "\n",
+    "### Etapas:\n",
+    "\n",
+    "1. **Extrair Haar features**:\n",
+    "   - São aplicadas features simples (retângulos claros e escuros) em diferentes partes da imagem para identificar bordas e áreas contrastantes, como olhos e nariz.\n",
+    "\n",
+    "2. **Imagem integral**:\n",
+    "   - A imagem é convertida em uma representação acumulativa para acelerar o cálculo das Haar features.\n",
+    "\n",
+    "3. **AdaBoost**:\n",
+    "   - Um classificador AdaBoost seleciona as Haar features mais relevantes que podem identificar rostos.\n",
+    "\n",
+    "4. **Cascata de classificadores**:\n",
+    "   - A imagem passa por uma série de classificadores simples. Áreas que não contêm um rosto são rapidamente descartadas nas primeiras camadas, e as regiões promissoras passam por classificadores mais complexos nas camadas finais.\n",
+    "\n",
+    "### Resultado:\n",
+    "O algoritmo retorna as regiões da imagem que contêm rostos, com base em características específicas."
    ]
   },
   {
@@ -109,7 +126,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. HOG+SVM"
+    "## 2. HOG + SVM\n",
+    "\n",
+    "### Etapas:\n",
+    "\n",
+    "1. **Calcular HOG (Histogram of Oriented Gradients)**:\n",
+    "   - A imagem é convertida em escala de cinza e dividida em pequenas células.\n",
+    "   - Para cada célula, os gradientes (mudanças na intensidade dos pixels) são calculados e agrupados em um histograma que representa as bordas e estruturas da face.\n",
+    "\n",
+    "2. **Normalizar os histogramas**:\n",
+    "   - Para melhorar a robustez às variações de iluminação, os histogramas são normalizados.\n",
+    "\n",
+    "3. **Treinar um SVM (Support Vector Machine)**:\n",
+    "   - O SVM é treinado para classificar os vetores de características HOG como \"rosto\" ou \"não-rosto\".\n",
+    "\n",
+    "4. **Janela deslizante**:\n",
+    "   - Uma janela deslizante percorre a imagem em diferentes escalas para detectar rostos em várias posições e tamanhos.\n",
+    "\n",
+    "### Resultado:\n",
+    "O SVM decide se a região contém ou não um rosto com base nas características HOG extraídas."
    ]
   },
   {
@@ -163,7 +198,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Face Net"
+    "## 3. CNN (MTCNN)\n",
+    "\n",
+    "### Etapas:\n",
+    "\n",
+    "1. **P-Net (Proposal Network)**:\n",
+    "   - A imagem é processada por uma pequena CNN (P-Net) que faz uma estimativa inicial das regiões que podem conter rostos.\n",
+    "   - Ela gera propostas de janelas (bounding boxes) com alta probabilidade de conter um rosto.\n",
+    "\n",
+    "2. **R-Net (Refinement Network)**:\n",
+    "   - As janelas propostas pelo P-Net são refinadas por outra CNN (R-Net), que ajusta as janelas e descarta falsas detecções.\n",
+    "\n",
+    "3. **O-Net (Output Network)**:\n",
+    "   - As janelas refinadas são passadas por uma última CNN (O-Net), que gera a detecção final do rosto e pontos-chave faciais (como olhos, nariz e boca).\n",
+    "\n",
+    "### Resultado:\n",
+    "MTCNN retorna as coordenadas das faces detectadas e os pontos-chave faciais."
    ]
   },
   {
@@ -213,7 +263,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4. Yolo"
+    "## 4. YOLO (You Only Look Once)\n",
+    "\n",
+    "### Etapas:\n",
+    "\n",
+    "1. **Divisão da imagem em uma grade**:\n",
+    "   - A imagem é dividida em uma grade (ex.: 7x7 células). Cada célula é responsável por prever se há um objeto (neste caso, uma face) em sua área.\n",
+    "\n",
+    "2. **Rede Neural Convolucional (CNN)**:\n",
+    "   - Uma CNN processa toda a imagem de uma vez e, em uma única passagem, gera predições de bounding boxes (caixas delimitadoras) e a probabilidade de que um rosto esteja presente em cada uma dessas caixas.\n",
+    "\n",
+    "3. **Non-Maximum Suppression (NMS)**:\n",
+    "   - Para remover sobreposições desnecessárias, a NMS filtra as caixas delimitadoras, deixando apenas as detecções com maior confiança.\n",
+    "\n",
+    "### Resultado:\n",
+    "O YOLO retorna as coordenadas das faces detectadas em uma única execução da rede."
    ]
   },
   {
@@ -299,9 +363,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "adaday-venv",
+   "display_name": "ada-venv",
    "language": "python",
-   "name": "python3"
+   "name": "ada-venv"
   },
   "language_info": {
    "codemirror_mode": {
